# mn-ai-agent

./: .env.example  .gitignore  README.md  config.toml  main.py  pyproject.toml
agent/: core.py  local_code.py  local_config.py  local_news.py  memory.py  models.py  ollama_client.py  tools.py
agent/rag/: __init__.py  chunking.py  config.py  ingest.py  retrieve.py  store.py
knowledge/: example.md
tests/: test_chat.py  test_core.py  test_news_types.py  test_rag.py  test_router.py
web_app/: __init__.py  app.py  chat_routes.py  rag_routes.py  ui.py
