[project]
name = "mn-ai-agent"
version = "0.1.0"
description = "Монгол + English AI agent — local + API"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.25.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]

[project.scripts]
agent = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
